# blossom

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  blossom.pc.in  config.h.in  configure  configure.ac
.arch-ids/: AUTHORS.id  COPYING.id  ChangeLog.id  INSTALL.id  NEWS.id  README.id  autogen.sh.id  blossom.pc.in.id
doc/: .arch-inventory  Doxyfile.in  Makefile.am  Makefile.in
doc/.arch-ids/: .arch-inventory.id  =id  Doxyfile.in.id
include/: Makefile.am  Makefile.in
include/.arch-ids/: =id
include/blossom/: Makefile.am  Makefile.in  blossom.h
include/blossom/.arch-ids/: =id
src/: Makefile.am  Makefile.in
src/.arch-ids/: =id
src/cgi-bin/: .arch-inventory  Makefile.am  Makefile.in  blossom.cgi.c
src/cgi-bin/.arch-ids/: .arch-inventory.id  =id
src/datatypes/: .arch-inventory  Makefile.am  Makefile.in  dictionary-test.c  dictionary.c  dictionary.h  x_tree.h
src/datatypes/.arch-ids/: .arch-inventory.id  =id
src/examples/.arch-ids/: =id
src/libblossom/: Makefile.am  Makefile.in  Version_script.in  blossom.c  config.c  datestamp.c  flavour.c  input.c  jhash-test.c  jhash.c  path.c  private.h  template.c  x_tree.c  xini-test.c  xini.c
src/libblossom/.arch-ids/: =id  Version_script.in.id
src/libjhash/: .arch-inventory  Makefile.am  Makefile.in  jhash.h
src/libjhash/.arch-ids/: .arch-inventory.id  =id  jhash-test.c.id
src/tests/.arch-ids/: =id
src/tools/: .arch-inventory  Makefile.am  Makefile.in  blossom-tool.c
src/tools/.arch-ids/: .arch-inventory.id  =id
